feat:实现根据菜单时间查询秒杀商品列表

--- a/changgou_web/changgou_web_seckill/src/main/resources/templates/seckill-index.html
+++ b/changgou_web/changgou_web_seckill/src/main/resources/templates/seckill-index.html
@@ -420,7 +420,7 @@
 				},
 				searchList:function (time) {
 					axios.get('/api/wseckillgoods/list?time='+time).then(function (response) {
-						app.goodslist = response.data.data;
+						app.goodslist = response.data;
 					})
 				}
 			},
