feat:实现秒杀下单的MQ生产者操作,处理下单请求的安全屏蔽已经业务前置判断,缓存库存数量更新

--- a/changgou_web/changgou_web_seckill/src/main/resources/templates/seckill-index.html
+++ b/changgou_web/changgou_web_seckill/src/main/resources/templates/seckill-index.html
@@ -358,8 +358,11 @@
 						axios.get("/api/wseckillorder/add?time="+moment(app.dateMenus[0]).format("YYYYMMDDHH")+"&id="+id+"&token="+response.data).then(function (response) {
 							if (response.data.flag){
 								app.msg='抢单成功，即将进入支付!';
+								alert('抢单成功，即将进入支付!');
+								window.location.reload(true)
 							}else{
 								app.msg='抢单失败';
+                                alert('抢单失败');
 							}
 						})
 
